--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,4 +7,9 @@
 body {
   font-family: 'Nohemi';
   background-color: black;
+  scroll-behavior: smooth;
+}
+
+html {
+  scroll-behavior: smooth;
 }
